--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,20 +8,20 @@
         android:id="@+id/TestSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"/>
+        android:layout_marginTop="10dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始测试"
-        android:layout_margin="20dp"
-        android:onClick="onClickStartTest"/>
+        android:layout_margin="10dp"
+        android:onClick="onClickStartTest" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="停止测试"
-        android:layout_margin="20dp"
-        android:onClick="onClickStopTest"/>
+        android:layout_margin="10dp"
+        android:onClick="onClickStopTest" />
 
 </LinearLayout>
